--- a/index.html
+++ b/index.html
@@ -13,5 +13,41 @@
     <link rel="stylesheet" href="./css/styles.css" />
     <script src="slider.js" type="module"></script>
   </head>
-  <body></body>
+  <body>
+    <section class="slider">
+      <div class="reviews">
+        <h2><span>/</span> reviews</h2>
+      </div>
+
+      <article class="slide">
+        <img
+          src="https://res.cloudinary.com/diqqf3eq2/image/upload/c_scale,w_200/v1595959121/person-1_aufeoq.jpg"
+          alt="peter"
+          class="img"
+        />
+
+        <h4>peter doe</h4>
+        <p class="title">product designer</p>
+        <p class="text">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure aperiam
+          vel pariatur placeat repellendus voluptatum maiores reprehenderit
+          dolores architecto aliquam?
+        </p>
+
+        <div class="quote-icon">
+          <i class="fa fa-quote-right"></i>
+        </div>
+      </article>
+
+      <!-- buttons -->
+      <button class="btn next-btn">
+        <i class="fas fa-chevron-left"></i>
+      </button>
+
+      <button class="btn prev-btn">
+        <i class="fas fa-chevron-right"></i>
+      </button>
+      <!-- end of buttons -->
+    </section>
+  </body>
 </html>
