--- a/index.html
+++ b/index.html
@@ -19,25 +19,29 @@
         <h2><span>/</span> reviews</h2>
       </div>
 
-      <article class="slide">
-        <img
-          src="https://res.cloudinary.com/diqqf3eq2/image/upload/c_scale,w_200/v1595959121/person-1_aufeoq.jpg"
-          alt="peter"
-          class="img"
-        />
+      <div class="slide-container">
+        <!-- single slide -->
+        <article class="slide">
+          <img
+            src="https://res.cloudinary.com/diqqf3eq2/image/upload/c_scale,w_200/v1595959121/person-1_aufeoq.jpg"
+            alt="peter"
+            class="img"
+          />
 
-        <h4>peter doe</h4>
-        <p class="title">product designer</p>
-        <p class="text">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure aperiam
-          vel pariatur placeat repellendus voluptatum maiores reprehenderit
-          dolores architecto aliquam?
-        </p>
+          <h4>peter doe</h4>
+          <p class="title">product designer</p>
+          <p class="text">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure
+            aperiam vel pariatur placeat repellendus voluptatum maiores
+            reprehenderit dolores architecto aliquam?
+          </p>
 
-        <div class="quote-icon">
-          <i class="fa fa-quote-right"></i>
-        </div>
-      </article>
+          <div class="quote-icon">
+            <i class="fa fa-quote-right"></i>
+          </div>
+        </article>
+        <!-- end of single slide -->
+      </div>
 
       <!-- buttons -->
       <button class="btn next-btn">
