--- a/index.html
+++ b/index.html
@@ -25,7 +25,67 @@
           <img
             src="https://res.cloudinary.com/diqqf3eq2/image/upload/c_scale,w_200/v1595959121/person-1_aufeoq.jpg"
             alt="peter"
-            class="img"
+            class="img profile-img"
+          />
+
+          <h4>peter doe</h4>
+          <p class="title">product designer</p>
+          <p class="text">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure
+            aperiam vel pariatur placeat repellendus voluptatum maiores
+            reprehenderit dolores architecto aliquam?
+          </p>
+
+          <div class="quote-icon">
+            <i class="fa fa-quote-right"></i>
+          </div>
+        </article>
+        <!-- end of single slide -->
+        <article class="slide">
+          <img
+            src="https://res.cloudinary.com/diqqf3eq2/image/upload/c_scale,w_200/v1595959121/person-1_aufeoq.jpg"
+            alt="peter"
+            class="img profile-img"
+          />
+
+          <h4>peter doe</h4>
+          <p class="title">product designer</p>
+          <p class="text">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure
+            aperiam vel pariatur placeat repellendus voluptatum maiores
+            reprehenderit dolores architecto aliquam?
+          </p>
+
+          <div class="quote-icon">
+            <i class="fa fa-quote-right"></i>
+          </div>
+        </article>
+        <!-- end of single slide -->
+        <article class="slide">
+          <img
+            src="https://res.cloudinary.com/diqqf3eq2/image/upload/c_scale,w_200/v1595959121/person-1_aufeoq.jpg"
+            alt="peter"
+            class="img profile-img"
+          />
+
+          <h4>peter doe</h4>
+          <p class="title">product designer</p>
+          <p class="text">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure
+            aperiam vel pariatur placeat repellendus voluptatum maiores
+            reprehenderit dolores architecto aliquam?
+          </p>
+
+          <div class="quote-icon">
+            <i class="fa fa-quote-right"></i>
+          </div>
+        </article>
+        <!-- end of single slide -->
+        <article class="slide active">
+          <img
+            src="https://res.cloudinary.com/diqqf3eq2/image/upload/c_scale,w_200/v1595959121/person-1_aufeoq.jpg"
+            alt="peter"
+            class="img profile-img"
           />
 
           <h4>peter doe</h4>
@@ -45,11 +105,11 @@
 
       <!-- buttons -->
       <button class="btn next-btn">
-        <i class="fas fa-chevron-left"></i>
+        <i class="fas fa-chevron-right"></i>
       </button>
 
       <button class="btn prev-btn">
-        <i class="fas fa-chevron-right"></i>
+        <i class="fas fa-chevron-left"></i>
       </button>
       <!-- end of buttons -->
     </section>
