--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
       <div class="slide-container">
         <!-- single slide -->
-        <article class="slide">
+        <!-- <article class="slide">
           <img
             src="https://res.cloudinary.com/diqqf3eq2/image/upload/c_scale,w_200/v1595959121/person-1_aufeoq.jpg"
             alt="peter"
@@ -39,67 +39,7 @@
           <div class="quote-icon">
             <i class="fa fa-quote-right"></i>
           </div>
-        </article>
-        <!-- end of single slide -->
-        <article class="slide">
-          <img
-            src="https://res.cloudinary.com/diqqf3eq2/image/upload/c_scale,w_200/v1595959121/person-1_aufeoq.jpg"
-            alt="peter"
-            class="img profile-img"
-          />
-
-          <h4>peter doe</h4>
-          <p class="title">product designer</p>
-          <p class="text">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure
-            aperiam vel pariatur placeat repellendus voluptatum maiores
-            reprehenderit dolores architecto aliquam?
-          </p>
-
-          <div class="quote-icon">
-            <i class="fa fa-quote-right"></i>
-          </div>
-        </article>
-        <!-- end of single slide -->
-        <article class="slide">
-          <img
-            src="https://res.cloudinary.com/diqqf3eq2/image/upload/c_scale,w_200/v1595959121/person-1_aufeoq.jpg"
-            alt="peter"
-            class="img profile-img"
-          />
-
-          <h4>peter doe</h4>
-          <p class="title">product designer</p>
-          <p class="text">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure
-            aperiam vel pariatur placeat repellendus voluptatum maiores
-            reprehenderit dolores architecto aliquam?
-          </p>
-
-          <div class="quote-icon">
-            <i class="fa fa-quote-right"></i>
-          </div>
-        </article>
-        <!-- end of single slide -->
-        <article class="slide active">
-          <img
-            src="https://res.cloudinary.com/diqqf3eq2/image/upload/c_scale,w_200/v1595959121/person-1_aufeoq.jpg"
-            alt="peter"
-            class="img profile-img"
-          />
-
-          <h4>peter doe</h4>
-          <p class="title">product designer</p>
-          <p class="text">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure
-            aperiam vel pariatur placeat repellendus voluptatum maiores
-            reprehenderit dolores architecto aliquam?
-          </p>
-
-          <div class="quote-icon">
-            <i class="fa fa-quote-right"></i>
-          </div>
-        </article>
+        </article> -->
         <!-- end of single slide -->
       </div>
 
